# gemm-demo

./: CMakeLists.txt  README.txt  build_all.sh
cmake/: aarch64-linux.gcc.toolchain.cmake  utils.cmake  x86_64-linux.clang.toolchain.cmake  x86_64-linux.gcc.toolchain.cmake
prj/: gemm-demo.sln
prj/gemm-demo/: gemm-demo.vcxproj  gemm-demo.vcxproj.filters
src/: MMult1.cpp  MMultBase.cpp  MMult_1x4_5.cpp  MMult_1x4_6.cpp  MMult_4x1_5.cpp  MMult_4x1_6.cpp  MMult_4x1_7.cpp  MMult_4x1_8.cpp  MMult_4x4_10.cpp  MMult_4x4_11.cpp  MMult_4x4_12.cpp  MMult_4x4_13.cpp  MMult_4x4_14.cpp  MMult_4x4_5.cpp  MMult_4x4_6.cpp  MMult_4x4_7.cpp  MMult_4x4_8.cpp  MMult_4x4_9.cpp  main.cpp  timer.h
